--- a/app/src/styles/components/Footer.css
+++ b/app/src/styles/components/Footer.css
@@ -1,10 +1,9 @@
 .footer {
     background-color: black;
-    width: 100%;
     height: 70px;
     color: white;
     margin-top: 5%;
-    position: static;
+    flex: 1;
 }
 
 .brand {
